--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -52,3 +52,14 @@ table {
     text-align: center;
   }
 }
+
+.field {
+  position: relative;
+}
+
+.icon-keyboard {
+  position: absolute;
+  top: 8px;
+  left: 360px;
+  cursor: pointer;
+}
